--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
-    "@quasar/extras": "^1.0.0",
-    "axios": "^0.18.0",
-    "quasar": "^1.0.0-beta.17"
+    "@quasar/extras": "^1.5.2",
+    "axios": "^0.18.1",
+    "quasar": "^1.9.8"
   },
   "devDependencies": {
-    "@quasar/app": "^1.0.0-beta.18",
+    "@quasar/app": "^1.6.0",
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.10.0",
